--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -1,7 +1,7 @@
 #services {
     min-height: 90vh;
     position: relative;
-    overflow-x: hidden !important;
+    // overflow-x: hidden !important;
 
     .services-bg-shape {
         position: absolute;
